--- a/2_packages.Rmd
+++ b/2_packages.Rmd
@@ -8,22 +8,24 @@ date: "2023-10-03"
 knitr::opts_chunk$set(echo = TRUE)
 ```
 
-## R Markdown
+## Creating an R package
 
-This is an R Markdown document. Markdown is a simple formatting syntax for authoring HTML, PDF, and MS Word documents. For more details on using R Markdown see <http://rmarkdown.rstudio.com>.
+For this portion of the portfolio, I have been working to improve an R package I have been working on for the last few years called `hull2spatial`. The package can be found in this GitHub repository: https://github.com/babichmorrowc/hull2spatial. The purpose of the package is to convert objects produced by the `alphahull` R package into objects that are compatible with the `sp` package. The `alphahull` package creates 2 types of shapes around a set of points: $\alpha$-shapes and $\alpha$-hulls. Both types of shapes depend on the parameter $\alpha$: when $\alpha$ is high, the resulting shape is closer to a convex hull, while when $\alpha$ is low, the resulting shape is more concave. $\alpha$-shapes are composed of straight lines, while $\alpha$-hulls can include arcs. See [this blog post](https://babichmorrowc.github.io/post/2019-03-18-alpha-hull/) for more detail on the motivation behind this package.
 
-When you click the **Knit** button a document will be generated that includes both content as well as the output of any embedded R code chunks within the document. You can embed an R code chunk like this:
+### Adding a license
 
-```{r cars}
-summary(cars)
+I hadn't previously added a license to `hull2spatial`, so I used the `usethis` package to add one. After doing some reading about license selection [here](https://r-pkgs.org/license.html), I selected the GPLv3license, which is a copyleft license that stipulates that everything using my code must remain open source. The `usethis` package has a built-in function `use_gpl_license()` that will automatically set up the appropriate licensing when run within the project containing the package.
+
+### Writing tests
+
+I also wanted to add some tests to my package using the `testthat` package. The `usethis` package automatically creates testing files in the proper format. By running `usethis::use_test()` when the relevant file of functions is open, it automatically created the test file using the naming convention `test-<r-file-name>.R` and put it inside the `tests/testthat` folder. In the case of my package, the test files can all be found [here](https://github.com/babichmorrowc/hull2spatial/tree/master/tests). By going to Build > Test Package within RStudio, I can run all of the tests I have written and find out how many tests have passed. This is equivalent to running `devtools::test()` in the console.
+
+I also set up GitHub Actions testing by running `usethis::use_github_action_check_standard()`, as mentioned in the course website [here](https://awllee.github.io/sc1/packages/ci/). I did receive the following warning message:
+
+```
+Warning message:
+`use_github_action_check_standard()` was deprecated in usethis 2.2.0.
+ℹ Please use the `check-standard` argument of `use_github_action()` instead.
 ```
 
-## Including Plots
-
-You can also embed plots, for example:
-
-```{r pressure, echo=FALSE}
-plot(pressure)
-```
-
-Note that the `echo = FALSE` parameter was added to the code chunk to prevent printing of the R code that generated the plot.
+which indicates that as of the most recent version of the `usethis` package, it is best to run `use_github_action("check-standard")` instead. I made a small [pull request](https://github.com/awllee/sc1/pull/7) to update this in the course website.
